tests/neg-custom-args/captures/leak-unsound-reach-6.check
-- Error: tests/neg-custom-args/captures/leak-unsound-reach-6.scala:7:13 -----------------------------------------------
7 |  println(xs.head) // error
  |          ^^^^^^^
  |          Local reach capability xs* leaks into capture scope of method f.
  |          You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/leak-unsound-reach-6.scala:11:14 ----------------------------------------------
11 |    val z = f(ys)   // error consume failure
   |              ^^
   |              Local reach capability ys* leaks into capture scope of method test.
   |              You could try to abstract the capabilities referred to by ys* in a capset variable.
